--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,12 @@
       "role": "Developer"
     }
   ],
-  "version": "0.1.4",
+  "version": "0.1.5",
   "minimum-stability": "dev",
   "require": {
     "php": "^7.2",
-    "illuminate/support": "~6.0",
-    "illuminate/console": "~6.0",
+    "illuminate/support": "~6.0 || ~7.0",
+    "illuminate/console": "~6.0 || ~7.0",
     "doctrine/dbal": "^2.6.0",
     "laravel/helpers": "~1.0",
     "nwidart/laravel-modules": "^5.0 || ^6.0 || ^7.0"
